<resources>
    <string name="app_name">yixinghe</string>
    <string name="click_register">没有账号？点击注册</string>
    <string name="login_btn">登 录</string>
    <string name="hint_password">密码</string>
    <string name="login_username">手机号 / 用户名</string>
    <string name="getphonecode">输入手机号</string>
    <string name="getcodebtn">获取验证码</string>
    <string name="getcode">注册</string>
    <string name="register">注册</string>
</resources>
