<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/activity_getcode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/register"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/getcode" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp">

            <View
                android:id="@+id/span1"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:visibility="invisible" />

            <View
                android:id="@+id/span2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:visibility="invisible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/phonecode"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:background="@null"
                    android:hint="@string/getphonecode"
                    android:inputType="phone"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/password"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/horizontal_line" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/span3"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_longin_btn"
                android:text="@string/getcodebtn"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</layout>